--- a/src/main/resources/application-jenny.properties
+++ b/src/main/resources/application-jenny.properties
@@ -1,6 +1,5 @@
-
-server.port=8080
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.hibernate.ddl-auto=create
+#server.port=8080
+#spring.datasource.url=jdbc:mysql://localhost:3306/reto3
+#spring.datasource.username=root
+#spring.datasource.password=1072705435
+#spring.jpa.hibernate.ddl-auto=create
